paper1/report-latex.log
make[1]: Entering directory '/home/syam/github/bigdata-i523/hid219/paper1'

bibtext report
===========================================

This is BibTeX, Version 0.99d (TeX Live 2015/Debian)
The top-level auxiliary file: report.aux
The style file: ACM-Reference-Format.bst
Database file #1: report.bib

bibtext _ label error
===========================================


bibtext space label error
===========================================

15:@ONLINE {bigdata,
21:@ONLINE {hadoop,
27:@ONLINE {mapreduce,
33:@ONLINE {ivr,
39:@INPROCEEDINGS{trans, 
54:@INPROCEEDINGS{bdlt, 
9:@ONLINE {its,

bibtext comma label error
===========================================

make[1]: Leaving directory '/home/syam/github/bigdata-i523/hid219/paper1'

latex report
===========================================

	[2017-11-08 20.23.59] pdflatex report.tex
This is pdfTeX, Version 3.14159265-2.6-1.40.16 (TeX Live 2015/Debian) (preloaded format=pdflatex)
Typesetting of "report.tex" completed in 0.6s.
make[1]: Entering directory '/home/syam/github/bigdata-i523/hid219/paper1'
  File "check.py", line 259
    print (counter, ": ", label, ": do not use underscore in labels:", sep = '')
                                                                           ^
SyntaxError: invalid syntax
Makefile:45: recipe for target 'check' failed
make[1]: *** [check] Error 1
make[1]: Leaving directory '/home/syam/github/bigdata-i523/hid219/paper1'
